Bug 141318 - "Close" button in "Target in Hyperlink" dialog missing its left border
Summary: "Close" button in "Target in Hyperlink" dialog missing its left border
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: lowest trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.2.0 target:7.1.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2021-03-29 10:00 UTC by sdc.blanco
Modified: 2021-04-05 05:20 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sdc.blanco 2021-03-29 10:00:21 UTC
1. Open any document in any application.
2. Insert > Hyperlink > Document > Target in Document

Result: "Close" button in "Target in Document" dialog is missing a left border
Expected: "left border" on Close button

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 35a06c67701eacb85591b61c948233a4f0ad238b
CPU threads: 8; OS: Windows 10.0 Build 19041; UI render: Skia/Raster; VCL: win
Locale: en-US (en_DK); UI: en-US
Calc: CL

Same problem in 7.1
Comment 1 Xisco Faulí 2021-03-31 08:36:33 UTC
Reproduced in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: dd5fe1b7602e0b772b3ddc188eb4d1fdfcd519cb
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 2 Xisco Faulí 2021-03-31 08:37:54 UTC
Also reproduced in

Version: 6.4.0.0.alpha1+
Build ID: 9bc848cf0d301aa57eabcffa101a1cf87bad6470
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: x11; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 3 Xisco Faulí 2021-03-31 08:38:40 UTC
Not reproduced in

Version: 6.3.0.0.alpha1+
Build ID: c98b1f1cd43b3e109bcaf6324ef2d1f449b34099
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: x11; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

it needs to be bisected with 6.4 repo
Comment 4 raal 2021-04-01 18:12:34 UTC
This seems to have begun at the below commit.
Adding Cc: to Caolán McNamara ; Could you possibly take a look at this one?
Thanks

commit a631c7c0d332ab8cedbfe4ae86b2f889890721bd
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Mon Jun 17 14:05:03 2019 +0200

    source 30b4f468b04d48e3fa734780028079a351b73306

https://gerrit.libreoffice.org/c/core/+/74152
 weld SvxHlinkDlgMarkWnd
Comment 5 Caolán McNamara 2021-04-02 14:04:15 UTC
The dialog width ends up narrower than it needs to be so the left side of that button is clipped off.
Comment 6 Commit Notification 2021-04-02 15:48:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a80fdc6894b81b7cd35fcf2c23079497daa66f89

tdf#141318 Dialog::GetOptimalSize not including border if called before Show

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2021-04-02 15:50:22 UTC
looks good in main, backport to 7-1 in gerrit
Comment 8 Commit Notification 2021-04-05 05:20:08 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/ba8b0906d8cfa2151363c718fd2e22091b7fd053

tdf#141318 Dialog::GetOptimalSize not including border if called before Show

It will be available in 7.1.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.