tdf#141318 Dialog::GetOptimalSize not including border if called before Show

Change-Id: I96ed67d84660106af2ef5de488da8abc7d556d1b