vcl/source/window/syswin.cxx
@@ -1018,7 +1018,10 @@ Size SystemWindow::GetOptimalSize() const
     if (!isLayoutEnabled())
         return Window::GetOptimalSize();
 
-    Size aSize = VclContainer::getLayoutRequisition(*GetWindow(GetWindowType::FirstChild));
+    Window *pBox = GetWindow(GetWindowType::FirstChild);
+    // tdf#141318 Do the same as SystemWindow::setOptimalLayoutSize in case we're called before initial layout
+    const_cast<SystemWindow*>(this)->settingOptimalLayoutSize(pBox);
+    Size aSize = VclContainer::getLayoutRequisition(*pBox);
 
     sal_Int32 nBorderWidth = get_border_width();
 
